<resources>
    <string name="app_name">Simple News App</string>
    <string name="title_news">News</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">profile</string>

    <string name="title_tab1">Movies</string>
    <string name="title_tab2">Tv Shows</string>
    <string name="action_change_language_settings">Change Language Settings</string>
    <string name="msg_poster_film">Poster Movie</string>
    <string name="msg_icon_popularity">icon popularity</string>
    <string name="msg_poster_tv_show">poster tv show</string>
    <string name="title_first_release_date">First Release Date</string>
    <string name="title_release_date">Release Date</string>
    <string name="msg_overlay_grey_image">overlay grey image</string>
    <string name="msg_image_back_poster">image background poster</string>
    <string name="text_genre">Genre</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">Tv Shows</string>
    <string name="title_favorites">Favorites</string>
    <string name="action_delete">Delete</string>
    <string name="action_icon_delete">icon delete</string>
    <string name="action_unfavorite">UnFavorite</string>
    <string name="msg_favorite">Favorite</string>
    <string name="msg_no_favorites">No Favorites</string>
    <string name="msg_image_no_favorites">image no favorites</string>
    <string name="app_widget_movie_text">My Favorites Movies</string>
    <string name="app_widget_tvshow_text">My Favorites Tv Shows</string>
    <string name="empty_text">No Data</string>
    <string name="title_activity_settings">Settings</string>

    <string name="key_noification_release_today" translatable="false">noification_release_today</string>
    <string name="key_notification_daily_reminder" translatable="false">notification_daily_reminder</string>
    <string name="key_languange_change" translatable="false">languange_change</string>
    <string name="text_search">Search</string>
    <string name="msg_not_found">Not Found</string>
    <string name="msg_poster_favorite">Poster Favorite</string>
    <string name="text_sample_title">Google\'s Bard AI chatbot launches in Australia with vow to develop it ethically - The Guardian</string>
    <string name="text_sample_description">Company says its AI programs will include watermarks and metadata identifying AI-generated content as ChatGPT rival rolls out in more than 180 countries</string>
    <string name="text_sample_author">Josh Taylor</string>
    <string name="text_sample_published_date"> | 22 October 2022</string>
    <string name="github_username">amaliasrasyid</string>
    <string name="user_name">Amalia Salmi Rasyid</string>
    <string name="sample_source">BaltimoreRavens.com</string>
    <string name="text_source">Source : </string>
</resources>