<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.amaliarasyid.simplenewsapp.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/navigation_news" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.amaliarasyid.simplenewsapp.ui.news.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_navigation_bookmark_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.amaliarasyid.simplenewsapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.amaliarasyid.simplenewsapp.ui.news.detail.DetailFragment"
        android:label="@string/title_news_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="extra_news_source"
            app:argType="com.amaliarasyid.simplenewsapp.data.entities.NewsWithSource" />
        <argument
            android:name="source_id"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="news_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>