<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:layout_marginStart="21dp"
    android:layout_marginEnd="21dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_rvitem_viewforeground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_shape">

        <ImageView
            android:id="@+id/img_item_poster"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:contentDescription="@string/msg_poster_film"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            style="@style/TextTitle"
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_poster"
            tools:text="@string/text_sample_title" />

        <TextView
            android:id="@+id/tv_item_author"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:alpha="0.7"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            tools:text="@string/text_sample_author" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:alpha="0.7"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@id/tv_item_author"
            tools:text="@string/text_sample_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
